===============================================================================
=                                                          Change Log                                                                                              =
===============================================================================

2.2.38
======

2.2.37
======

Feature: 

auto_association updated. ( Not merged yet).
auto_association been registered to listeners that reacts on "Open Project" event, "Create/Import Project" event.( Many thanks to ZF Engineering Plzen s.r.o)

#134 Possiblity to set number of element for lshistory command

Bug: 

#385 Checkout with UCM don't work ( Thanks Hakim).
#386 With UCM, SetActivity don't work if you confirm directly the dialog (Thanks again Hakim).
#390 Do not use CheckinIdenticalAllowed preference when checking in with cleardlg (Thanks Hakim).
#392 Unhijack with Clearcase dialog 


2.2.36
=====

Feature: auto_association added, 'Associate All' button added ( Many thanks to ZF Engineering Plzen s.r.o)

Bugs:

382 Sort by History Version in Windows


2.2.35
=====

Bugs:

368 NPE on Eclipse shutdown due to null element in state cache 
370 NPE from ccase plugin 
371 ClearCase History sort by date not working. 


2.2.34
=====

Feature:

125 	Compare with other View ( unix only).
122 Uncheckout unmodified files when checking in 
124 Follow ui guidelines regarding ellipses in context menu item labels 

Bugs:

366 Better fault message
359 eclipse UI frozen after changing config spec
360 Unable to hijack files (Eclipse 4.1) 

Reverted:

365 An internal error occurred during: "Refreshing ClearCase Resource States". 

2.2.33
=====

Bugs:

#362 exetrnel comapre not working after updating to latest plugin release.
#364 SingleProcess timed out! Process will be restarted! 
#365 An internal error occurred during: "Refreshing ClearCase Resource States". 


Features:

#120 Add Capability To Label Files Upon Check-In 

2.2.32
=====

Bugs:
