@@ -60,7 +60,7 @@ Preferences.Comments.CommentCheckoutNeverOnAuto=Never prompt for comment on auto
 Preferences.Comments.CommentAddNeverOnAuto=Never prompt for comment on auto add
 Preferences.Comments.CommentEscapeXml=Escape "<>'&& with XML entities
 Preferences.Comments.BranchPrefix=Branch prefix
-Preferences.History.Records=Limit number of versions retrieved for element. 
+Preferences.History.Records=No. of versions in history: 
 
 DecoratorPreferencePage.description=Customize the ClearCase decorations to suite your needs.
 DecoratorPreferencePage.category.general=General
